[project]
name = "hugo2wpcom"
version = "0.1.0"
description = "Convert Hugo Markdown files to WordPress.com"
readme = "README.md"
authors = [
    {name = "Farzad FARID", email = "farzy@farzy.org"},
]
license = {text = "Apache License 2.0"}
requires-python = ">=3.13, <4.0"
dependencies = [
    "python-wordpress-xmlrpc >=2.3, <3.0",
    "markdown >=3.7, <4.0",
    "requests-oauthlib >=2.0.0, <3.0.0",
]

[dependency-groups]
test = [
    "notebook >=7.3.2, <8.0.0",
]

[tool.uv]
default-groups = []
